--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
 <h1>YOUR BANK</h1>
 <hr>
 <h3>Your Bank at Your Doorstep</h3>
