--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
+</style>
 <ul>
   <li><a href="default.asp">Home</a></li>
   <li><a href="news.asp">News</a></li>
