--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@ li {
 </style>
 <ul>
   <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
+  <li><a href="news.asp">Service</a></li>
+  <li><a href="contact.asp">Net Banking</a></li>
+  <li>About</li>
+  <li>Contact</li>
 </ul>
 <h1>YOUR BANK</h1>
 <hr>
