--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ li {
 <ul>
   <li><a href="default.asp">Home</a></li>
   <li><a href="news.asp">Service</a></li>
-  <li><a href="login.asp">Net Banking</a></li>
+  <li><a href="login.html">Net Banking</a></li>
   <li><a href="about.asp">About</a></li>
   <li><a href="contact.asp">Contact</a></li>
 </ul>
